@@ -1,5 +1,5 @@
-#define MAX_CHANNELS		24
-#define MAX_TRACKS		12
+#define MAX_CHANNELS    24
+#define MAX_TRACKS    12
 
 class mi;
 
@@ -9,18 +9,18 @@ class gvals
 {
 public:
   byte vWaveformA;
-	byte vPWMRateA;
-	byte vPWMRangeA;
-	byte vPWOffsetA;
+  byte vPWMRateA;
+  byte vPWMRangeA;
+  byte vPWOffsetA;
   byte vWaveformB;
-	byte vPWMRateB;
-	byte vPWMRangeB;
-	byte vPWOffsetB;
+  byte vPWMRateB;
+  byte vPWMRangeB;
+  byte vPWOffsetB;
   byte vTranspose;
   byte vDetune;
-	byte vOscMix;     // 10
-	byte vSubOscWave;
-	byte vSubOscVol;
+  byte vOscMix;     // 10
+  byte vSubOscWave;
+  byte vSubOscVol;
   byte vGlide;
 
   byte vFilterType; 
@@ -30,11 +30,11 @@ public:
   byte vFilterAttack;
 
   byte vFilterDecay; 
-	byte vFilterSustain; // 20
-	byte vFilterRelease;
+  byte vFilterSustain; // 20
+  byte vFilterRelease;
   byte vFilterShape;
   byte vFilterInertia;
-	byte vFilterTrack;
+  byte vFilterTrack;
 
   byte vLFORate;
   byte vLFOAmount1; 
@@ -42,16 +42,16 @@ public:
   byte vLFOShape;
 
   byte vLFO2Rate;
-  byte vLFO2Amount1; 
+  byte vLFO2Amount1;      // 30
   byte vLFO2Amount2; 
   byte vLFO2Shape;
 
   byte vAmpAttack;
   byte vAmpDecay;
-	byte vAmpSustain;
-	byte vAmpRelease;
+  byte vAmpSustain;
+  byte vAmpRelease;
 
-	byte vLFOMode;
+  byte vLFOMode;
 };
 
 class tvals
@@ -60,22 +60,22 @@ public:
   byte vNote;
   byte vVelocity;
   byte vLength;
-	byte vCommand1;
-	word vParam1;
-	byte vCommand2;
-	word vParam2;
+  byte vCommand1;
+  word vParam1;
+  byte vCommand2;
+  word vParam2;
 };
 
 class avals
 {
 public:
-	int channel;
+  int channel;
   int usevelocity;
   int hq;
   int crispness;
   int theviderness;
   int tuning;
-	int cliptable;
+  int cliptable;
 };
 
 #pragma pack()
@@ -89,13 +89,13 @@ public:
   float PhaseOSC1;
   float PhaseOSC2;
   float PhaseOSC3;
-	float Velocity;
+  float Velocity;
   C6thOrderFilter Filter;
   CADSREnvelope FilterEnv;
   CADSREnvelope AmpEnv;
   int Phase1, Phase2;
   float Detune;
-	
+  
   CInertia inrKeyTrack;
   CInertia inrCutoff2;
 
@@ -103,7 +103,7 @@ public:
   
   CChannel();
   void Init();
-	void ClearFX();
+  void ClearFX();
   bool IsFree() { return AmpEnv.m_nState==4; }
   void Reset();
   void NoteReset();
@@ -115,20 +115,20 @@ public:
   mi *pmi;
   int channel;
   byte note,accent,length;
-	byte lastnote, lastaccent, lastlength;
+  byte lastnote, lastaccent, lastlength;
   float DestFrequency, BaseFrequency, NotePortFrequency;
   float Detune;
-	
+  
   char Arps[3];
-	int ArpPoint, ArpCount;
+  int ArpPoint, ArpCount;
   int MidiNote;
-	int RetrigCount, RetrigPoint, RetrigMode;
-	float Vib1Phase,Vib2Phase;
-	int ShuffleCounter, ShuffleMax, ShuffleAmount;
-	int ShuffleData[16];
-	float Vib1Rate,Vib1Depth,Vib2Rate,Vib2Depth;
+  int RetrigCount, RetrigPoint, RetrigMode;
+  float Vib1Phase,Vib2Phase;
+  int ShuffleCounter, ShuffleMax, ShuffleAmount;
+  int ShuffleData[16];
+  float Vib1Rate,Vib1Depth,Vib2Rate,Vib2Depth;
   int NoTrig;
-	float SlideCounter, SlideEnd, SlideRange;
+  float SlideCounter, SlideEnd, SlideRange;
 
   float LFOPhase, LFO2Phase;
   float CurLFO, CurLFO2;
@@ -140,12 +140,12 @@ public:
   byte AllocChannel();
   CChannel *Chn();
   void PlayNote(byte note, byte accent, byte length, CMasterInfo *pMasterInfo);
-	void CommandA(byte cmd, word param);
-	void CommandB(byte cmd, word param);
-	void ClearFX();
-	int GetWakeupTime(int maxtime);
-	void UseWakeupTime(int maxtime);
-	void DoWakeup(mi *pmi);
+  void CommandA(byte cmd, word param);
+  void CommandB(byte cmd, word param);
+  void ClearFX();
+  int GetWakeupTime(int maxtime);
+  void UseWakeupTime(int maxtime);
+  void DoWakeup(mi *pmi);
   void DoLFO(mi *pmi, int c);
   void Init();
   void Reset();
@@ -168,36 +168,36 @@ struct CWaveSource {
 class mi : public CMachineInterface
 {
 public:
-	mi();
-	virtual ~mi();
+  mi();
+  virtual ~mi();
 
-	virtual void Init(CMachineDataInput * const pi);
-	virtual void Tick();
-	virtual bool Work(float *psamples, int numsamples, int const mode);
+  virtual void Init(CMachineDataInput * const pi);
+  virtual void Tick();
+  virtual bool Work(float *psamples, int numsamples, int const mode);
 
-	virtual void SetNumTracks(int const n);
+  virtual void SetNumTracks(int const n);
 
-	virtual void AttributesChanged();
-	virtual void Stop();
+  virtual void AttributesChanged();
+  virtual void Stop();
   virtual void MidiNote(int const channel, int const value, int const velocity);
 
-	virtual char const *DescribeValue(int const param, int const value);
+  virtual char const *DescribeValue(int const param, int const value);
 
-	short const *GetOscillatorTab(int const waveform);
+  short const *GetOscillatorTab(int const waveform);
   void DoPlay();
-	virtual void Command(int const i);
-	virtual void Save(CMachineDataOutput * const po);
+  virtual void Command(int const i);
+  virtual void Save(CMachineDataOutput * const po);
 
-	void GenerateUserWaves(int Slot);
+  void GenerateUserWaves(int Slot);
   void Reset();
   void ClearFX();
 
 private:
-	void InitTrack(int const i);
-	void ResetTrack(int const i);
+  void InitTrack(int const i);
+  void ResetTrack(int const i);
 
-	void TickTrack(CTrack *pt, tvals *ptval);
-	bool WorkTrack(CTrack *pt, float *pin, float *pout, int numsamples, int const mode);
+  void TickTrack(CTrack *pt, tvals *ptval);
+  bool WorkTrack(CTrack *pt, float *pin, float *pout, int numsamples, int const mode);
 
 
 public:
@@ -210,25 +210,25 @@ public:
   CInertia inrLFO2Dest1;
   CInertia inrLFO2Dest2;
 
-	gvals gvalAct;
-	CChannel Channels[MAX_CHANNELS];
-	int numTracks;
-	CTrack Tracks[MAX_TRACKS+1];
+  gvals gvalAct;
+  CChannel Channels[MAX_CHANNELS];
+  int numTracks;
+  CTrack Tracks[MAX_TRACKS+1];
   float CurCutoff, CurRes;
   avals aval;
 
-	CBandlimitedTable usertables[8];
+  CBandlimitedTable usertables[8];
   float userwaves[8][2048];
   CWaveSource usersources[8];
-	int PWMBuffer1[256];
-	int PWMBuffer2[256];
+  int PWMBuffer1[256];
+  int PWMBuffer2[256];
   CPWMLFO Osc1PWM, Osc2PWM;
 
 private:
   int nCurChannel;
 
-	gvals gval;
-	tvals tval[MAX_TRACKS];
+  gvals gval;
+  tvals tval[MAX_TRACKS];
 
   CMachine *ThisMachine;
 };
